--- a/css/style.css
+++ b/css/style.css
@@ -132,6 +132,7 @@
     background: url(../images/login.jpg) no-repeat center center;
     border-radius: 0px !important;
 }
+
 .mask1 {
     width: 100%;
     height: 100vh;
@@ -141,4 +142,205 @@
     text-align: center;
 }
 
+/* Desktop/Laptop/Others - Above 980px */
 
+.img_responsive {
+    display: block;
+    width: 100%;
+    line-height: 0;
+    height: auto;
+}
+
+.mob_only {
+    display: none
+}
+
+.tab_only {
+    display: none
+}
+
+.des_only {
+    display: block
+}
+
+.des_hider {
+    display: none;
+}
+
+/* Tab 960px - 768px */
+
+@media only screen and (max-width: 999px) {
+    .mob_only {
+        display: none
+    }
+
+    .tab_only {
+        display: block
+    }
+
+    .des_only {
+        display: none
+    }
+
+    .des_hider {
+        display: block;
+    }
+
+    .tab_hider {
+        display: none;
+    }
+}
+
+/* Mobile 480px - 767px */
+
+@media only screen and (max-width: 767px) {
+    .mob_only {
+        display: block
+    }
+
+    .tab_only {
+        display: none
+    }
+
+    .des_hider {
+        display: block;
+    }
+
+    .mob_hider {
+        display: none;
+    }
+
+    .mob_shower {
+        display: block;
+    }
+
+    .timeBg {
+        width: 90%;
+        height: auto !important;
+        background: #fff;
+        margin:20px auto !important;
+        padding: 20px;
+        border-radius: 0px 50px 0px 50px;
+    }
+
+    .dateText {
+        width: 100%;
+        height: auto;
+        margin-top: 0px;
+        float: none;
+        color: #fe5804;
+        text-align: center;
+
+
+    }
+
+    .dateText p {
+        font-size: 40px;
+        font-weight: 900;
+        margin-top: 10px;
+    }
+
+    .dateText h1 {
+        font-size: 26px;
+        font-weight: 600;
+        line-height: 28px;
+    }
+
+    .dateTime {
+        width: 100%;
+        float: none;
+        padding: 0px 0px;
+        text-align: center;
+
+    }
+
+    .dateTime p {
+        color: #fe5804;
+        font-size: 18px;
+        font-weight: 800;
+        line-height: 20px;
+        text-align: center;
+    }
+    .testiBox a {
+        vertical-align: middle;
+        display: inline-block;
+        margin-left: 0px;
+    }
+}
+
+/* Mobile Below 480px */
+
+@media only screen and (max-width: 479px) {
+    .mob_only {
+        display: block
+    }
+
+    .tab_only {
+        display: none
+    }
+
+    .des_hider {
+        display: block;
+    }
+
+    .mob_hider {
+        display: none;
+    }
+
+    .mob_shower {
+        display: block;
+    }
+
+    .timeBg {
+        width: 90%;
+        height: auto !important;
+        background: #fff;
+        margin:20px auto !important;
+        padding: 20px;
+        border-radius: 0px 50px 0px 50px;
+    }
+
+    .dateText {
+        width: 100%;
+        height: auto;
+        margin-top: 0px;
+        float: none;
+        color: #fe5804;
+        text-align: center;
+
+
+    }
+
+    .dateText p {
+        font-size: 40px;
+        font-weight: 900;
+        margin-top: 10px;
+    }
+
+    .dateText h1 {
+        font-size: 26px;
+        font-weight: 600;
+        line-height: 28px;
+    }
+
+    .dateTime {
+        width: 100%;
+        float: none;
+        padding: 0px 0px;
+        text-align: center;
+
+    }
+
+    .dateTime p {
+        color: #fe5804;
+        font-size: 18px;
+        font-weight: 800;
+        line-height: 20px;
+        text-align: center;
+    }
+    .testiBox a {
+        vertical-align: middle;
+        display: inline-block;
+        margin-left: 0px;
+    }
+}
